Updated to HTTPClient 0.3.3